[package]
name = "synchronoise"
version = "0.2.0"
authors = ["QuietMisdreavus <grey@quietmisdreavus.net>"]
description = "Synchronization primitives that build upon the standard library"
repository = "https://github.com/QuietMisdreavus/synchronoise"
documentation = "https://docs.rs/synchronoise/"
license = "MIT/Apache-2.0"

[dependencies]
